# dnsbench

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  PKGBUILD  README.md  docker-bake.hcl
packaging/linux/: dnsbench.desktop
resources/: resources.qrc  test_domains.txt
src/: main.cpp
src/benchmark/: BaseResolver.h  BenchmarkController.cpp  BenchmarkController.h  DnsPacket.cpp  DnsPacket.h  DohResolver.cpp  DohResolver.h  DotResolver.cpp  DotResolver.h  Statistics.cpp  Statistics.h  UdpResolver.cpp  UdpResolver.h
src/cli/: HeadlessBenchmark.cpp  HeadlessBenchmark.h
src/detection/: LinuxDnsDetector.cpp  LinuxDnsDetector.h  SystemDnsDetector.cpp  SystemDnsDetector.h
src/export/: ResultExporter.cpp  ResultExporter.h
src/model/: ResolverEntry.h  ResolverModel.cpp  ResolverModel.h
src/ui/: AddResolverDialog.cpp  AddResolverDialog.h  MainWindow.cpp  MainWindow.h  ResultsTab.cpp  ResultsTab.h  TimelineChart.cpp  TimelineChart.h
tests/: test_dns_detection.cpp  test_dns_packet.cpp  test_statistics.cpp  test_udp_benchmark.cpp
